--- a/css/main.css
+++ b/css/main.css
@@ -261,3 +261,52 @@ textarea {
   }
 }
 
+/*RGProgra*/
+.rg-html {
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
+.rg-body {
+  color: white;
+  padding: 0;
+  margin: 0;
+  height: 100%;
+  min-height: 100%;
+  overflow-y: scroll;
+  font-size: 16px;
+}
+
+.rg-body p {
+  margin-top: 0;
+}
+
+.rg-gradient {
+  background: rgb(1,46,64);
+  background: linear-gradient(-180deg, rgba(1,46,64,1) 0%, rgba(6,9,14,1) 100%);
+}
+.rg-logo-container {
+  text-align: center;
+  padding-top: 10em;
+}
+.rg-logo {
+  width: 200px;
+  /*margin should be 10% of width*/
+  margin: 20px;
+  height: auto;
+  display: inline-block;
+}
+
+.container {
+  width: auto;
+  margin-left: 14px;
+  margin-right: 14px;
+}
+
+.row {
+  margin-left: -14px;
+  margin-right: -14px;
+  padding-left: 14px;
+  padding-right: 14px;
+}
+
